[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Steven Shaw <steven.shaw@tweag.io>"]
readme = "README.md"
packages = [{include = "flask_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
