cabal-version: 3.4

name: hello-hs
version: 0.1.0.0
license: MIT
license-file: LICENCE
author:
  Steven Shaw <steven@steshaw.org>
maintainer:
  Steven Shaw <steven@steshaw.org>

executable hello-hs
  main-is: Main.hs
  build-depends: base ^>=4.15.0.0
  build-depends: shellmet ^>= 0.0.4.0
  build-depends: text ^>= 1.2.4.1
  hs-source-dirs: app
  default-language: Haskell2010
