[tool.poetry]
name = "imgapp"
version = "0.1.0"
description = ""
authors = ["Steven Shaw <steven@steshaw.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pillow = "^9.4.0"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
