[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Steven Shaw <steven.shaw@tweag.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foo = "foo:main"
